--- a/index.html
+++ b/index.html
@@ -72,5 +72,55 @@
       </div>
     </section>
     <!--/header-->
+
+    <!--promo-->
+    <section class="section-outer section-promo">
+      <div class="section-inner">
+        <div class="section-promo-popular">
+          <div class="section-promo-popular-title">Popular Exercise</div>
+          <div class="section-promo-popular-text">
+            Lorem iduf dsfsdf fdgdfg sdfsdf ewrwerewr ff sdfsdfs dfdsgf dsggfd
+            sdsd regrg grgd sdfsd ewrwer werwerw wertrytry t regrg grgd sdfsd
+            ewrwer werwerw wertrytry yyyrr.
+          </div>
+          <div class="section-promo-popular-line">
+            <img src="./image/Vector 2.png" alt="" />
+          </div>
+        </div>
+        <div class="section-promo-photo">
+          <div class="section-promo-photo-a">
+            <img src="./image/Rectangle 471.png" alt="" />
+          </div>
+          <div class="section-promo-photo-b">
+            <img src="./image/Rectangle 472.png" alt="" />
+          </div>
+          <div class="section-promo-photo-c">
+            <img src="./image/Rectangle 473.png" alt="" />
+          </div>
+          <div class="section-promo-photo-d">
+            <img src="./image/Rectangle 474.png" alt="" />
+          </div>
+          <div class="section-promo-photo-e">
+            <img src="./image/Rectangle 475.png" alt="" />
+          </div>
+        </div>
+        <div class="section-promo-ultimate">
+          <div class="section-promo-ultimate-title">
+            The ultimate online online personal training plans
+          </div>
+          <div class="section-promo-ultimate-subtitle">
+            <div class="section-promo-ultimate-subtitle-line">
+              <img src="./image/Line 155.png" alt="" />
+            </div>
+            <div class="section-promo-ultimate-subtitle-text">
+              Lorem iduf dsfsdf fdgdfg sdfsdf ewrwerewr ff sdfsdfs dfdsgf dsggfd
+              sdsd regrg grgd sdfsd ewrwer werwerw wertrytry t yyyrr. Lorem iduf
+              dsfsdf fdgdfg sdfsdf ewrwerewr ff sdfsdfs.
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--/promo-->
   </body>
 </html>
