--- a/index.html
+++ b/index.html
@@ -122,5 +122,48 @@
       </div>
     </section>
     <!--/promo-->
+
+    <!--ad-->
+    <section class="section-outer section-ad">
+      <div class="section-inner">
+        <div class="section-ad-personal">
+          <div class="section-ad-personal-a">
+            <img src="./image/Rectangle 481.png" alt="" />
+          </div>
+
+          <div class="section-ad-personal-b">
+            <div class="section-ad-personal-b-title">Personal training</div>
+            <div class="section-ad-personal-b-subtitle">Gym time optimized</div>
+            <div class="section-ad-personal-b-text">
+              Lorem iduf dsfsdf fdgdfg sdfsdf ewrwerewr ff sdfsdfs dfdsgf dsggfd
+              sdsd regrg grgd sdfsd ewrwer werwerw wertrytry t yyyrr. Lorem iduf
+              dsfsdf fdgdfg sdfsdf ewrwerewr ff sdfsdfs.
+            </div>
+          </div>
+        </div>
+        <div class="section-ad-a">
+          <img src="./image/Rectangle 477.png" alt="" />
+        </div>
+        <div class="section-ad-b">
+          <img src="./image/Rectangle 482.png" alt="" />
+        </div>
+        <div class="section-ad-c">
+          <img src="./image/Rectangle 483.png" alt="" />
+        </div>
+        <div class="section-ad-d">
+          <img src="./image/Rectangle 484.png" alt="" />
+        </div>
+        <div class="section-ad-e">
+          <div class="section-ad-e-title">
+            Welcom to <span class="red">R</span>Gym
+          </div>
+          <div class="section-ad-e-text">
+            Lorem iduf dsfsdf fdgdfg sdfsdf ewrwerewr ff sdfsdfs dfdsgf dsggfd
+            sdsd regrg grgd sdfsd ewrwer werwerw wertrytry t yyyrr.
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--/ad-->
   </body>
 </html>
