--- a/index.html
+++ b/index.html
@@ -165,5 +165,34 @@
       </div>
     </section>
     <!--/ad-->
+
+    <!--mail-->
+    <section class="section-outer section-mail">
+      <div class="section-inner">
+        <div class="section-mail-content">
+          <div class="section-mail-content-photo">
+            <img src="./image/Rectangle 491 (1).png" alt="" />
+          </div>
+          <form action="">
+            <div class="section-mail-content-list">
+              <div class="section-mail-content-list-title">
+                Subscribe to our newsletter
+              </div>
+              <div class="section-mail-content-list-subtitle">
+                Lorem iduf dsfsdf fdgdfg sdfsdf ewrwerewr ff sdfsdfs dfdsgf
+                dsggf
+              </div>
+              <div class="section-mail-content-list-mail">
+                <input type="text" placeholder="Enter Email" />
+              </div>
+              <div class="section-mail-content-list-submit">
+                <button class="btn-main">Submit</button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </section>
+    <!--/mail-->
   </body>
 </html>
