--- a/index.html
+++ b/index.html
@@ -194,5 +194,57 @@
       </div>
     </section>
     <!--/mail-->
+
+    <!--footer-->
+    <section class="section-outer section-footer">
+      <div class="section-inner">
+        <div class="section-footer-content">
+          <div class="section-footer-content-rg">
+            <div class="section-footer-content-rg-rgym">
+              <span class="red">R</span>Gym
+            </div>
+            <div class="section-footer-content-rg-lor">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit
+            </div>
+          </div>
+          <div class="section-footer-content-info">
+            <div class="section-footer-content-info-inform">Information</div>
+            <div class="section-footer-content-info-list">
+              <div>About us</div>
+              <div>Lifstyle</div>
+              <div>Fitness</div>
+              <div>Pricing</div>
+            </div>
+          </div>
+          <div class="section-footer-content-more">
+            <div class="section-footer-content-more-morelinks">More Links</div>
+            <div class="section-footer-content-more-list">
+              <div>Gallery</div>
+              <div>ClubLocstion</div>
+              <div>Behind the scence</div>
+              <div>Contact</div>
+            </div>
+          </div>
+          <div class="section-footer-content-fol">
+            <div class="section-footer-content-fol-follow">Follow Us On!</div>
+            <div class="section-footer-content-fol-pic">
+              <div class="section-footer-content-fol-pic-f">
+                <img src="./image/Vector (5).png" alt="" />
+              </div>
+              <div class="section-footer-content-fol-pic-t">
+                <img src="./image/Vector (6).png" alt="" />
+              </div>
+              <div class="section-footer-content-fol-pic-i">
+                <img src="./image/Vector (7).png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="section-footer-copyright">
+          Copyright c 2021 <span class="red">R</span>Gym. All Rights Reserved.
+        </div>
+      </div>
+    </section>
+    <!--/footer-->
   </body>
 </html>
