--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
             </div>
           </div>
           <div class="section-header-cap-right">
-            <ul class="section-header-cap-right-link">
-              <li>Traning</li>
-              <li>Studio Classess</li>
-              <li>Lifestyle</li>
-              <li>Contact</li>
-            </ul>
+            <div>Traning</div>
+            <div>Studio Classess</div>
+            <div>Lifestyle</div>
+            <div>Contact</div>
           </div>
         </div>
         <div class="section-header-content">
